// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from second to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-controller-component"
>
  <div
    className="header-controller"
  >
    <div
      className="controller-ambient"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
            >
              Ambient Color : 
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#7df1e8",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
                title="ambient color"
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-transform"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="transform-gizmo-switch"
          >
            <div
              className="translation select"
              onClick={[Function]}
              title="translation"
            />
            <div
              className="rotation not-select"
              onClick={[Function]}
              title="rotation"
            />
            <div
              className="scale not-select"
              onClick={[Function]}
              title="scale"
            />
          </article>
          <article
            className="transform-gizmo-coordinate-system-switch"
          >
            <button
              disabled={false}
              onClick={[Function]}
              title="switch coordinate system"
            >
              World
            </button>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-runAndStop"
      onClick={[Function]}
      title="run/stop"
    >
      <img
        src="./public/img/run.png"
      />
    </div>
    <div
      className="controller-other"
    />
  </div>
</article>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test redo operate test redo two step undo step which from second to zero,redo step which from zero to second 1`] = `
<article
  className="wonder-controller-component"
>
  <div
    className="header-controller"
  >
    <div
      className="controller-ambient"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
            >
              Ambient Color : 
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#1918e8",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
                title="ambient color"
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-transform"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="transform-gizmo-switch"
          >
            <div
              className="translation select"
              onClick={[Function]}
              title="translation"
            />
            <div
              className="rotation not-select"
              onClick={[Function]}
              title="rotation"
            />
            <div
              className="scale not-select"
              onClick={[Function]}
              title="scale"
            />
          </article>
          <article
            className="transform-gizmo-coordinate-system-switch"
          >
            <button
              disabled={false}
              onClick={[Function]}
              title="switch coordinate system"
            >
              World
            </button>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-runAndStop"
      onClick={[Function]}
      title="run/stop"
    >
      <img
        src="./public/img/run.png"
      />
    </div>
    <div
      className="controller-other"
    />
  </div>
</article>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-controller-component"
>
  <div
    className="header-controller"
  >
    <div
      className="controller-ambient"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
            >
              Ambient Color : 
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#1918e8",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
                title="ambient color"
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-transform"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="transform-gizmo-switch"
          >
            <div
              className="translation select"
              onClick={[Function]}
              title="translation"
            />
            <div
              className="rotation not-select"
              onClick={[Function]}
              title="rotation"
            />
            <div
              className="scale not-select"
              onClick={[Function]}
              title="scale"
            />
          </article>
          <article
            className="transform-gizmo-coordinate-system-switch"
          >
            <button
              disabled={false}
              onClick={[Function]}
              title="switch coordinate system"
            >
              World
            </button>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-runAndStop"
      onClick={[Function]}
      title="run/stop"
    >
      <img
        src="./public/img/run.png"
      />
    </div>
    <div
      className="controller-other"
    />
  </div>
</article>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test undo operate test undo one step step which from second to first 1`] = `
<article
  className="wonder-controller-component"
>
  <div
    className="header-controller"
  >
    <div
      className="controller-ambient"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
            >
              Ambient Color : 
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#7df1e8",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
                title="ambient color"
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-transform"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="transform-gizmo-switch"
          >
            <div
              className="translation select"
              onClick={[Function]}
              title="translation"
            />
            <div
              className="rotation not-select"
              onClick={[Function]}
              title="rotation"
            />
            <div
              className="scale not-select"
              onClick={[Function]}
              title="scale"
            />
          </article>
          <article
            className="transform-gizmo-coordinate-system-switch"
          >
            <button
              disabled={false}
              onClick={[Function]}
              title="switch coordinate system"
            >
              World
            </button>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-runAndStop"
      onClick={[Function]}
      title="run/stop"
    >
      <img
        src="./public/img/run.png"
      />
    </div>
    <div
      className="controller-other"
    />
  </div>
</article>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test undo operate test undo two step step which from second to zero 1`] = `
<article
  className="wonder-controller-component"
>
  <div
    className="header-controller"
  >
    <div
      className="controller-ambient"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
            >
              Ambient Color : 
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#000000",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
                title="ambient color"
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-transform"
    >
      <div
        className="header-item"
      >
        <div
          className="component-item"
        >
          <article
            className="transform-gizmo-switch"
          >
            <div
              className="translation select"
              onClick={[Function]}
              title="translation"
            />
            <div
              className="rotation not-select"
              onClick={[Function]}
              title="rotation"
            />
            <div
              className="scale not-select"
              onClick={[Function]}
              title="scale"
            />
          </article>
          <article
            className="transform-gizmo-coordinate-system-switch"
          >
            <button
              disabled={false}
              onClick={[Function]}
              title="switch coordinate system"
            >
              World
            </button>
          </article>
        </div>
      </div>
    </div>
    <div
      className="controller-runAndStop"
      onClick={[Function]}
      title="run/stop"
    >
      <img
        src="./public/img/run.png"
      />
    </div>
    <div
      className="controller-other"
    />
  </div>
</article>
`;
